--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "jquery": "^3.6.0",
     "ng2-search-filter": "^0.5.1",
     "ngx-doc-viewer": "^2.0.2",
+    "ngx-loading": "^8.0.0",
     "ngx-spinner": "^11.0.2",
     "ngx-toastr": "^14.0.0",
     "popper.js": "^1.16.1",
