--- a/package.json
+++ b/package.json
@@ -26,11 +26,12 @@
     "bootstrap": "^5.0.1",
     "datatables.net": "^1.10.20",
     "datatables.net-bs4": "^1.10.20",
+    "docx2html": "^1.1.0",
     "firebase": "^8.6.3",
     "font-awesome": "^4.7.0",
     "jquery": "^3.6.0",
     "ng2-search-filter": "^0.5.1",
-    "ngx-doc-viewer": "^2.0.2",
+    "ngx-doc-viewer": "^2.0.4",
     "ngx-loading": "^8.0.0",
     "ngx-spinner": "^11.0.2",
     "ngx-toastr": "^14.0.0",
