--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "ngx-toastr": "^14.0.0",
     "popper.js": "^1.16.1",
     "rxjs": "~6.6.0",
+    "save": "^2.4.0",
     "tslib": "^2.0.0",
     "xlsx": "^0.17.0",
     "zone.js": "~0.10.2"
