--- a/package.json
+++ b/package.json
@@ -22,8 +22,13 @@
     "@angular/platform-browser-dynamic": "~11.0.5",
     "@angular/router": "~11.0.5",
     "@ng-bootstrap/ng-bootstrap": "^9.1.2",
+    "@syncfusion/ej2-angular-buttons": "^19.1.63",
+    "@syncfusion/ej2-angular-documenteditor": "^19.1.65",
+    "@syncfusion/ej2-angular-navigations": "^19.1.63",
+    "@syncfusion/ej2-angular-splitbuttons": "^19.1.63",
     "angular-datatables": "^12.0.0",
     "bootstrap": "^5.0.1",
+    "cors": "^2.8.5",
     "datatables.net": "^1.10.20",
     "datatables.net-bs4": "^1.10.20",
     "docx2html": "^1.1.0",
